--- a/src/tool.yml
+++ b/src/tool.yml
@@ -1,28 +1,14 @@
 tools:
-  foobar:
-    title: Foo Bar
-    description: A dummy tool to exemplify the YAML file
-    version: 0.1
+  ismn_loader:
+    title: Stable ranks MetaCatalog data loader
+    description: Loads the ISMN data as an example from an existing MetaCatalog database instance
     parameters:
-      foo_int: 
-        type: integer
-      foo_float:
-        type: float
-      foo_string:
+      database_name:
         type: string
-      foo_enum:
-        type: enum
-        values:
-          - foo
-          - bar
-          - baz
-      foo_array:
-        type: integer
-        array: true
-    data:
-      foo_matrix:
-        extension: dat
-        description: A matrix file that can be read by numpy
-      foo_csv:
-        extension: csv
-        description: A standard formatted CSV file, for autoloading using pandas
+        default: database.duckdb
+      force_rebuild_duckdb:
+        type: boolean
+        default: false
+        description: | 
+          Force rebuild of the DuckDB database. If set to true, any existing DuckDB at /out/
+          named like specified in the database_name parameter will be deleted and recreated.
