--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,10 +33,10 @@ services:
     environment:
       METACATALOG_URI: postgresql://postgres:postgres@db:5432/metacatalog
       TOOL_RUN: ismn_loader
-    # command: ["echo",  "run the loader with an active MetaCatalog instance like: 'docker compose run --rm data-loader python run.py'"] 
-    ports:
-     - 8000:8000
-    command: ["jupyter", "notebook", "--ip=0.0.0.0", "--port=8000", "--no-browser", "--allow-root", "--NotebookApp.token='dev'"]
+    command: ["echo",  "run the loader with an active MetaCatalog instance like: 'docker compose run --rm data-loader python run.py'"] 
+    #ports:
+    # - 8000:8000
+    #command: ["jupyter", "notebook", "--ip=0.0.0.0", "--port=8000", "--no-browser", "--allow-root", "--NotebookApp.token='dev'"]
 
 
   stable-ranks:
