--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,7 @@ services:
     build: ./metacatalog-api/
     volumes:
       - ./data/files:/data
+      - ./metacatalog-api/metacatalog_api:/app/metacatalog_api
     links:
       - db
     depends_on:
@@ -63,6 +64,7 @@ services:
       PORT: 8005
     ports:
       - 8005:8005
+      - 5678:5678
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:8005/version || exit 1"]
       interval: 30s
@@ -70,6 +72,7 @@ services:
       retries: 5
       start_period: 30s
       start_interval: 1s
+    command: python -m debugpy --listen 0.0.0.0:5678 metacatalog_api/default_server.py --reload=True
   
   data-loader:
     build: .
